--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/imageswootup/nic.jpg" alt="" />
+                <img class="profile" src="assets/images/profile.png" alt="" />
                 <h1 class="name">Nicolas Poitras-Demange</h1>
                 <h3 class="tagline">Web developer</h3>
             </div><!--//profile-container-->
