--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
+    <meta name="description" content="Nicolas Poitras personal page">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -39,32 +39,31 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: nicopoitras@email.com">nicopoitras@gmail.com</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:514 651 7111">514 651 7111</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://ca.linkedin.com/in/nicolaspoitrasdemange" target="_blank">Linkedin</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/poitras</a></li>
-                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
+                    <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li> -->
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://ca.linkedin.com/in/nicolaspoitrasdemange" target="_blank">account/Nicolas Poitras</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/poitras" target="_blank">github.com/poitras</a></li>
+                    <!--<li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li> -->
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
-                    <h4 class="degree">MSc in Computer Science</h4>
-                    <h5 class="meta">University of London</h5>
-                    <div class="time">2011 - 2012</div>
+                    <h4 class="degree">Information technology engineering</h4>
+                    <h5 class="meta">École de technologie supérieur (ETS)</h5>
+                    <div class="time">2014 - current</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">BSc in Applied Mathematics</h4>
-                    <h5 class="meta">Bristol University</h5>
-                    <div class="time">2007 - 2011</div>
+                    <h4 class="degree">Diploma of college studies in Computer science</h4>
+                    <h5 class="meta">Cégep du Vieux Montréal</h5>
+                    <div class="time">2010 - 2013</div>
                 </div><!--//item-->
             </div><!--//education-container-->
 
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>English <span class="lang-desc">(Native)</span></li>
-                    <li>French <span class="lang-desc">(Professional)</span></li>
-                    <li>Spanish <span class="lang-desc">(Professional)</span></li>
+                    <li>French <span class="lang-desc">(Native)</span></li>
+                    <li>English <span class="lang-desc">(Professional)</span></li>
                 </ul>
             </div><!--//interests-->
 
@@ -218,7 +217,7 @@
     <footer class="footer">
         <div class="text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+                <small class="copyright">Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a>, modified by Nicolas Poitras-Demange</small>
         </div><!--//container-->
     </footer><!--//footer-->
 
