--- a/en/index.html
+++ b/en/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!--> <html lang="fr"> <!--<![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
   <title>Nicolas Resume</title>
   <!-- Meta -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Page personnel de Nicolas Poitras">
+  <meta name="description" content="Nicolas Poitras personal page">
   <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
   <link rel="shortcut icon" href="favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <!-- Global CSS -->
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/plugins/bootstrap/css/bootstrap.min.css">
   <!-- Plugins CSS -->
-  <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="../assets/plugins/font-awesome/css/font-awesome.css">
 
   <!-- Theme CSS -->
-  <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+  <link id="theme-style" rel="stylesheet" href="../assets/css/styles.css">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -30,11 +30,11 @@
 
   <div class="wrapper">
     <div class="sidebar-wrapper">
-      <p style="float:right;margin:2px"><a href="#" >fr</a>/<a href="en/">en</a></p>
+      <p style="float:right;margin:2px"><a href="../">fr</a>/<a href="../en/">en</a></p>
         <div class="profile-container">
-            <img class="profile" src="assets/images/profile.png" alt="" />
+            <img class="profile" src="../assets/images/profile.png" alt="" />
             <h1 class="name">Nicolas Poitras-Demange</h1>
-            <h3 class="tagline">Développeur web</h3>
+            <h3 class="tagline">Web developer</h3>
         </div><!--//profile-container-->
 
         <div class="contact-container container-block">
@@ -72,9 +72,9 @@
         <div class="interests-container container-block">
             <h2 class="container-block-title">Interests</h2>
             <ul class="list-unstyled interests-list">
-                <li>Voyage</li>
-                <li>Sport</li>
-                <li>Musique</li>
+                <li>Climbing</li>
+                <li>Snowboarding</li>
+                <li>Cooking</li>
             </ul>
         </div><!--//interests-->
 
@@ -83,7 +83,7 @@
     <div class="main-wrapper">
 
         <section class="section summary-section">
-            <h2 class="section-title"><i class="fa fa-user"></i>Profil de carrière</h2>
+            <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
             <div class="summary">
                 <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="http://themes.3rdwavemedia.com/website-templates/orbit-free-resume-cv-template-for-developers/" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
             </div><!--//summary-->
@@ -224,9 +224,9 @@
   </footer><!--//footer-->
 
   <!-- Javascript -->
-  <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../assets/plugins/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
   <!-- custom js -->
-  <script type="text/javascript" src="assets/js/main.js"></script>
+  <script type="text/javascript" src="../assets/js/main.js"></script>
 </body>
 </html>
