changement pour page html

--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <title>Nicolas Resume</title>
+  <title>Nicolas P</title>
   <!-- Meta -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
 
   <div class="wrapper">
     <div class="sidebar-wrapper">
-      <p style="float:right;margin:2px"><a href="../">fr</a>/<a href="../en/">en</a></p>
+      <p style="float:right;margin:2px"><a href="">fr</a>/<a href="#">en</a></p>
         <div class="profile-container">
             <img class="profile" src="../assets/images/profile.png" alt="" />
             <h1 class="name">Nicolas Poitras-Demange</h1>
