--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="fr"> <!--<![endif]-->
 <head>
-  <title>Nicolas Resume</title>
+  <title>Nicolas P</title>
   <!-- Meta -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +34,7 @@
         <div class="profile-container">
             <img class="profile" src="assets/images/profile.png" alt="" />
             <h1 class="name">Nicolas Poitras-Demange</h1>
-            <h3 class="tagline">Développeur web</h3>
+            <h3 class="tagline">Développeur Web</h3>
         </div><!--//profile-container-->
 
         <div class="contact-container container-block">
@@ -48,29 +48,29 @@
             </ul>
         </div><!--//contact-container-->
         <div class="education-container container-block">
-            <h2 class="container-block-title">Education</h2>
+            <h2 class="container-block-title">Éducation</h2>
             <div class="item">
-                <h4 class="degree">Information technology engineering</h4>
-                <h5 class="meta">École de technologie supérieur (ETS)</h5>
-                <div class="time">2014 - current</div>
+                <h4 class="degree">Génie des technologies de l'information</h4>
+                <h5 class="meta">École de technologie supérieure (ETS)</h5>
+                <div class="time">2014 - courant</div>
             </div><!--//item-->
             <div class="item">
-                <h4 class="degree">Diploma of college studies in Computer science</h4>
+                <h4 class="degree">Diplôme d’études collégiales</h4>
                 <h5 class="meta">Cégep du Vieux Montréal</h5>
                 <div class="time">2010 - 2013</div>
             </div><!--//item-->
         </div><!--//education-container-->
 
         <div class="languages-container container-block">
-            <h2 class="container-block-title">Languages</h2>
+            <h2 class="container-block-title">Langages</h2>
             <ul class="list-unstyled interests-list">
-                <li>French <span class="lang-desc">(Native)</span></li>
-                <li>English <span class="lang-desc">(Professional)</span></li>
+                <li>Français <span class="lang-desc">(Natif)</span></li>
+                <li>Anglais <span class="lang-desc">(Professionnel)</span></li>
             </ul>
         </div><!--//interests-->
 
         <div class="interests-container container-block">
-            <h2 class="container-block-title">Interests</h2>
+            <h2 class="container-block-title">Intérêts</h2>
             <ul class="list-unstyled interests-list">
                 <li>Voyage</li>
                 <li>Sport</li>
@@ -85,7 +85,7 @@
         <section class="section summary-section">
             <h2 class="section-title"><i class="fa fa-user"></i>Profil de carrière</h2>
             <div class="summary">
-                <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="http://themes.3rdwavemedia.com/website-templates/orbit-free-resume-cv-template-for-developers/" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                <p>Bienvenue sur ma page, merci de prendre le temps d’apprendre à me connaitre. Je suis un étudiant en ingénierie des technologies de l’information passionnée par l’univers du web. Vous aller pourvoir constater que mon parcours est rempli d’expérience et de projet qui mon permis de confirmer mon choix de carrière, la planification et la construction de projet web. J’ai eu la chance travaillée avec des équipes d’une cinquantaine de développeurs autant que j’ai eu de petits projets. Bonne lecture, et n’hésiter pas a me contacter!</p>
             </div><!--//summary-->
         </section><!--//section-->
 
