--- a/en/index.html
+++ b/en/index.html
@@ -30,7 +30,7 @@
 
   <div class="wrapper">
     <div class="sidebar-wrapper">
-      <p style="float:right;margin:2px"><a href="">fr</a>/<a href="#">en</a></p>
+      <p style="float:right;margin:2px"><a href="../">fr</a>/<a href="#">en</a></p>
         <div class="profile-container">
             <img class="profile" src="../assets/images/profile.png" alt="" />
             <h1 class="name">Nicolas Poitras-Demange</h1>
